Rename the project to libvirt-php and add install-module to src/Makefile.am
Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -133,8 +133,12 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+NAME = libvirt-php
 RM = rm
 PHPINC = `php-config --includes`
+PHPEDIR = `php-config --extension-dir`
+XMLCFLAGS = `pkg-config libxml-2.0 --cflags`
+XMLLIBS = `pkg-config libxml-2.0 --libs`
 all: all-am
 
 .SUFFIXES:
@@ -316,9 +320,13 @@ uninstall-am:
 all: compile clean-temp
 
 compile:
-	$(CC) -fpic -DCOMPILE_DL_LIBVIRT=1 $(PHPINC) -c -o php_libvirt.o libvirt.c `pkg-config libxml-2.0 --cflags`
-	$(CC) -shared $(LIBS) -rdynamic -o php_libvirt.so php_libvirt.o -ldl -lvirt `pkg-config libxml-2.0 --libs`
-	echo "Extension compiled as php_libvirt.so"
+	$(CC) -fpic -DCOMPILE_DL_LIBVIRT=1 $(PHPINC) -c -o $(NAME).o libvirt.c $(XMLCFLAGS)
+	$(CC) -shared $(LIBS) -rdynamic -o $(NAME).so $(NAME).o -ldl -lvirt $(XMLLIBS)
+	echo "Extension compiled as $(NAME).so"
+
+install-module:
+	cp $(NAME).so $(PHPEDIR)
+	echo "extension=php_libvirt.so" > /etc/php.d/libvirt-php.ini
 
 clean-temp:
 	$(RM) -f *.o
