Fix project name in configure.ac and installation scripts
Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/docs/Makefile.in
+++ b/docs/Makefile.in
@@ -389,14 +389,14 @@ maintainer-clean-local: clean-local
 rebuild: all
 
 install-data-local:
-	$(mkinstalldirs) $(DESTDIR)$(HTML_DIR)
+	$(mkinstalldirs) $(pkgdatadir)
 	for f in $(css) $(dot_html) $(png); do \
-	  $(INSTALL) -m 0644 $(srcdir)/$$f $(DESTDIR)$(HTML_DIR); \
+	  $(INSTALL) -m 0644 $(srcdir)/$$f $(pkgdatadir); \
 	done
 
 uninstall-local:
 	for f in $(css) $(dot_html) $($png); do \
-	  rm $(DESTDIR)$/$$(basename $$f); \
+	  rm -f $(pkgdatadir)/$$(basename $$f); \
 	done
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
