--- a/docs/docs.html.in
+++ b/docs/docs.html.in
@@ -2,9 +2,9 @@
   <body>
     <h1>Documentation</h1>
     <p>
-      If you are a server administration you need to compile and deploy the libvirt-php module first.
-      Once you have libvirt-php compiled and deployed to your PHP and webserver you can start using
-      it. Now please select the area you're interested in from the left menu.
-    </p>
+      If you are a server administrator and you want to use libvirt-php you need to compile and deploy
+      libvirt-php module first. Once you have libvirt-php compiled and deployed to your PHP and webserver
+      you can start using it. </p>
+    <p>Select the area you are interested in from the left menu.</p>
   </body>
 </html>
