--- a/docs/news.html.in
+++ b/docs/news.html.in
@@ -5,8 +5,8 @@
   </head>
   <body>
     <h1>News</h1>
-    <p>Here will the list of official releases of libvirt-php project but it's empty now since no release has been done yet.
-    If you want to see the commits or download the source from git please refer to project's GIT repository at:</p>
+    <p>Here will the list of official releases of libvirt-php project but it's empty now since no release has been done yet.</p>
+    <p>If you want to see the commits or download the source from <a href="http://git-scm.com">git</a> please refer to project's GIT repository at:</p>
 
     <pre>http://libvirt.org/git/?p=libvirt-php.git</pre>
 
