Add API generating tool to the repository and run it on compile time
New tools has been added to the tools directory. It's API documentation
generator based on the source code comments.

It's accepting comment syntax like:
/*
	Function name:	function_name
	Arguments:	@var  [type]: description
			@var2 [type]: description of var2
	Returns:	return value meaning with type, like "domain name string" etc.
*/

and output the valid html.in file that's used as source for pages found in the docs
subdirectory.

Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/docs/sitemap.html.in
+++ b/docs/sitemap.html.in
@@ -35,6 +35,10 @@
         <span>Information for users, administrators and developers</span>
         <ul>
           <li>
+            <a href="api-reference.html">API reference</a>
+            <span>API reference documentation</span>
+          </li>
+          <li>
             <a href="compiling.html">Compiling</a>
             <span>How to compile libvirt-php</span>
           </li>
