--- a/libvirt-php.spec.in
+++ b/libvirt-php.spec.in
@@ -26,6 +26,7 @@ BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-root
 BuildRequires:	php-devel
 BuildRequires:	libvirt-devel >= %{req_libvirt_version}
 BuildRequires:	libxml2-devel
+BuildRequires:	libxslt
 %if 0%{?suse_version}  
 BuildRequires:	xhtml-dtd
 %else
