Add some new tests and allow `make check` to run unit tests
Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/docs/sitemap.html.in
+++ b/docs/sitemap.html.in
@@ -40,7 +40,7 @@
           </li>
           <li>
             <a href="dev-api-reference.html">Developer's API Reference</a>
-            <span>libvirt-php developer's API reference (public functions)</span>
+            <span>libvirt-php developer's API reference (private functions)</span>
           </li>
           <li>
             <a href="compiling.html">Compiling</a>
