Add --with-php-config flag
php extensions can usually be configured to use a specific php-config
using --with-php-config to explicitly specify a path to php-config.
Moved phpize-detection after php-config and use php-config's prefix path
to look for phpize first.

Signed-off-by: Tiziano Mueller <dev-zero@gentoo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
-PHPINC=$(shell php-config --includes)
-PHPEDIR=$(shell php-config --extension-dir)
-PHPCDIR=$(shell php-config --configure-options | sed -n 's|.*--with-config-file-scan-dir=\([^ ]*\).*|\1|p')
+PHPINC=$(shell $(PHPCONFIG) --includes)
+PHPEDIR=$(shell $(PHPCONFIG) --extension-dir)
+PHPCDIR=$(shell $(PHPCONFIG) --configure-options | sed -n 's|.*--with-config-file-scan-dir=\([^ ]*\).*|\1|p')
 DEFINES=-DHAVE_CONFIG_H
 
 EXTRA_DIST = libvirt.c libvirt_php.h
