--- a/libvirt-php.spec.in
+++ b/libvirt-php.spec.in
@@ -2,7 +2,7 @@
 
 %if 0%{?suse_version} 
 %define		php_confdir %{_sysconfdir}/php5/conf.d
-%define		php_extdir 	%{_libdir}/php5/extensions
+%define		php_extdir  %{_libdir}/php5/extensions
 %else
 %define		php_confdir %{_sysconfdir}/php.d 
 %define		php_extdir  %{_libdir}/php/modules
@@ -41,7 +41,7 @@ Requires:	php
 
 %description
 PHP language bindings for Libvirt API. 
-For more details see: http://phplibvirt.cybersales.cz/ http://www.libvirt.org/ http://www.php.net/
+For more details see: http://www.libvirt.org/php/
 
 %package -n libvirt-php-doc
 Summary:	Document of libvirt-php
@@ -50,7 +50,7 @@ Requires:	libvirt-php = %{version}
 
 %description -n libvirt-php-doc
 PHP language bindings for Libvirt API. 
-For more details see: http://phplibvirt.cybersales.cz/ http://www.libvirt.org/ http://www.php.net/
+For more details see: http://www.libvirt.org/php/ http://www.php.net/
 
 This package contain the document for libvirt-php.
 
@@ -80,4 +80,5 @@ rm -rf %{buildroot}
 %{_datadir}/doc/%{name}-%{version}/html
 
 %changelog
-
+* Tue Feb 8 2011 Michal Novotny <minovotn@redhat.com> - 0.4.1
+- Initial commit (from github)
