Add information about first public release available (0.4.1)
Signed-off-by: Michal Novotny <minovotn@redhat.com>

--- a/docs/downloads.html.in
+++ b/docs/downloads.html.in
@@ -6,8 +6,10 @@
     <h2>Official Releases</h2>
 
     <p>
-      There are no official releases available yet.
+      You can download the first official release, release 0.4.1, from:
     </p>
+
+      <pre><a href="http://libvirt.org/sources/php/libvirt-php-0.4.1.tar.gz">http://libvirt.org/sources/php/libvirt-php-0.4.1.tar.gz</a></pre>
 
     <h2>GIT source repository</h2>
 
